# data-reduce

./: .flake8  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml
data_reduce/: __init__.py  base.py  plotting.py  sampler.py  vw.py
demo/: 2D Data Reduction.ipynb
