[tool.poetry]
name = "data-reduce"
version = "0.1.0"
description = "Data reduction algorithms"
authors = [
    "Kevin Stone <kevin.stone38@gmail.com>",
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = [
    "data rich",
    "data reduction",
    "line simplification"
]
packages = [
    { include = "data-reduce" },
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "1.26"
streamlit = "^1.42.2"
plotly = "^6.0.0"
pandas = "^2.2.3"
ipykernel = {version = "^6.29.5", extras = ["dev"]}
nbformat = {version = "^5.10.4", extras = ["dev"]}
